feature: Reworked the VGG network to be more clear with what I learned of FCN
Specifically I was confused about the skip layers and the 1x1x13
convolutional, so I reworked the network. Unfortunately my problem still
exists, so back to the drawing board

--- a/Segmantic Segmentation with VGG16.ipynb
+++ b/Segmantic Segmentation with VGG16.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,12 +193,31 @@
     "    image_paths = glob(os.path.join(\"./data/Train/CameraRGB\", \"*.png\"))\n",
     "    label_paths = glob(os.path.join(\"./data/Train/CameraSeg\", \"*.png\"))\n",
     "    \n",
+    "    chosen_image = '165.png';\n",
+    "    \n",
+    "    for batch in range(0, len(image_paths), batch_size):\n",
+    "        images = []\n",
+    "        maps = []\n",
+    "        \n",
+    "#         for image_file in image_paths[batch:batch + batch_size]:\n",
+    "#             image = cv2.imread(\"./data/Train/CameraRGB/{}\".format(chosen_image))\n",
+    "#             image = cv2.cvtColor(image, cv2.COLOR_BGR2RGB)\n",
+    "#             image = cv2.resize(image, image_shape)\n",
+    "#             map_image = cv2.imread(\"./data/Train/CameraSeg/{}\".format(chosen_image))\n",
+    "#             map_image = cv2.cvtColor(map_image, cv2.COLOR_BGR2RGB)\n",
+    "#             map_image = cv2.resize(map_image, image_shape)\n",
+    "#             map_image = imageToTruth(map_image)\n",
+    "            \n",
+    "#             images.append(image)\n",
+    "#             maps.append(map_image)\n",
+    "            \n",
+    "#         yield np.array(images), np.array(maps)\n",
+    "    \n",
     "    for batch in range(0, len(image_paths), batch_size):\n",
     "        images = []\n",
     "        maps = []\n",
     "        \n",
     "        for index, image_file in enumerate(image_paths[batch:batch + batch_size]):\n",
-    "#             map_file = os.path.join(\"./data/Train/CameraSeg\", label_paths[os.path.basename(image_file)])\n",
     "            map_file = os.path.join(label_paths[index])\n",
     "            \n",
     "            image = cv2.imread(image_file)\n",
@@ -208,10 +227,6 @@
     "            map_image = cv2.cvtColor(map_image, cv2.COLOR_BGR2RGB)\n",
     "            map_image = cv2.resize(map_image, image_shape)\n",
     "            map_image = imageToTruth(map_image)\n",
-    "            \n",
-    "#             bg = np.all(map_image == np.array([0, 0, 0]), axis=2)\n",
-    "#             bg = bg.reshape(*bg.shape, 1)\n",
-    "#             map_image = np.concatenate((bg, np.invert(bg)), axis=2)\n",
     "            \n",
     "            images.append(image)\n",
     "            maps.append(map_image)\n",
@@ -223,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "scrolled": true
    },
@@ -233,65 +248,17 @@
      "output_type": "stream",
      "text": [
       "INFO:tensorflow:Restoring parameters from b'./vgg/variables/variables'\n",
-      "WARNING:tensorflow:From <ipython-input-10-0c02f8e06f87>:72: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
-      "Instructions for updating:\n",
-      "\n",
-      "Future major versions of TensorFlow will allow gradients to flow\n",
-      "into the labels input on backprop by default.\n",
-      "\n",
-      "See tf.nn.softmax_cross_entropy_with_logits_v2.\n",
-      "\n",
       "Graph has been built - launching training\n",
       "====== :-) ======\n",
+      "\n",
       "Launching Epoch 0\n",
-      "Batch 10 - loss of 2.564948797225952\n",
-      "Batch 20 - loss of 2.5649497509002686\n",
-      "Batch 30 - loss of 2.564948558807373\n",
-      "Batch 40 - loss of 2.5649499893188477\n",
-      "Batch 50 - loss of 2.5649471282958984\n",
-      "Batch 60 - loss of 2.5649476051330566\n",
-      "Batch 70 - loss of 2.5649492740631104\n",
-      "Batch 80 - loss of 2.5649495124816895\n",
-      "Batch 90 - loss of 2.564948797225952\n",
-      "Batch 100 - loss of 2.5649492740631104\n",
-      "Batch 110 - loss of 2.564948081970215\n",
-      "Batch 120 - loss of 2.564948320388794\n",
-      "Batch 130 - loss of 2.564948797225952\n",
-      "Batch 140 - loss of 2.5649492740631104\n",
-      "Batch 150 - loss of 2.5649468898773193\n",
-      "Batch 160 - loss of 2.5649497509002686\n",
-      "Batch 170 - loss of 2.564948320388794\n",
-      "Batch 180 - loss of 2.564948797225952\n",
-      "Batch 190 - loss of 2.5649492740631104\n",
-      "Batch 200 - loss of 2.564948797225952\n",
-      "Batch 210 - loss of 2.564948797225952\n",
-      "Batch 220 - loss of 2.5649490356445312\n",
-      "Batch 230 - loss of 2.564948797225952\n",
-      "Batch 240 - loss of 2.5649490356445312\n",
-      "Batch 250 - loss of 2.564948558807373\n",
-      "Batch 260 - loss of 2.564948558807373\n",
-      "Batch 270 - loss of 2.564948081970215\n",
-      "Batch 280 - loss of 2.564948558807373\n",
-      "Batch 290 - loss of 2.5649478435516357\n",
-      "Batch 300 - loss of 2.564948797225952\n",
-      "Batch 310 - loss of 2.5649476051330566\n",
-      "Batch 320 - loss of 2.564946413040161\n",
-      "Batch 330 - loss of 2.564948081970215\n",
-      "Batch 340 - loss of 2.5649495124816895\n",
-      "Batch 350 - loss of 2.564948797225952\n",
-      "Batch 360 - loss of 2.5649495124816895\n",
-      "Batch 370 - loss of 2.5649468898773193\n",
-      "Batch 380 - loss of 2.5649492740631104\n",
-      "Batch 390 - loss of 2.5649502277374268\n",
-      "Batch 400 - loss of 2.5649476051330566\n",
-      "Batch 410 - loss of 2.564948797225952\n",
-      "Batch 420 - loss of 2.564948797225952\n",
-      "Batch 430 - loss of 2.564948558807373\n",
-      "Batch 440 - loss of 2.5649499893188477\n",
-      "Batch 450 - loss of 2.564951181411743\n",
-      "Batch 460 - loss of 2.564948797225952\n",
-      "Batch 470 - loss of 2.564948558807373\n",
-      "Batch 480 - loss of 2.564948797225952\n"
+      "(?, ?, ?, 13)\n",
+      "(?, ?, ?, 13)\n",
+      "(?, ?, ?, 13)\n",
+      "(?, ?, ?, 13)\n",
+      "(?, ?, ?, 13)\n",
+      "(?, ?, ?, 13)\n",
+      "(?, ?, ?, 13)\n"
      ]
     },
     {
@@ -301,8 +268,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-0c02f8e06f87>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     94\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     95\u001b[0m         \u001b[0;31m#get the images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 96\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtruth\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mget_training_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     97\u001b[0m             \u001b[0mbatch_count\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     98\u001b[0m             _, loss = sess.run(\n",
-      "\u001b[0;32m<ipython-input-7-f19592ddac72>\u001b[0m in \u001b[0;36mget_training_data\u001b[0;34m(batch_size)\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     15\u001b[0m             \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 16\u001b[0;31m             \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcvtColor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCOLOR_BGR2RGB\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     17\u001b[0m             \u001b[0mimage\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage_shape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mmap_image\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mimread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-17-373985be9023>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     92\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     93\u001b[0m         \u001b[0;31m#get the images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 94\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtruth\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mget_training_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     95\u001b[0m             \u001b[0mbatch_count\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     96\u001b[0m             _, loss = sess.run(\n",
+      "\u001b[0;32m<ipython-input-8-56f2f0b938d7>\u001b[0m in \u001b[0;36mget_training_data\u001b[0;34m(batch_size)\u001b[0m\n\u001b[1;32m     43\u001b[0m             \u001b[0mmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap_image\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     44\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 45\u001b[0;31m         \u001b[0;32myield\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     46\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     47\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
@@ -325,70 +292,67 @@
     "    keep_prob = graph.get_tensor_by_name(\"keep_prob:0\") #Dropout settings\n",
     "    \n",
     "    #more layer grabbing\n",
-    "    layer3 = graph.get_tensor_by_name(\"layer3_out:0\")\n",
-    "    layer4 = graph.get_tensor_by_name(\"layer4_out:0\")\n",
-    "    layer7 = graph.get_tensor_by_name(\"layer7_out:0\")\n",
+    "    layer_3 = graph.get_tensor_by_name(\"layer3_out:0\")\n",
+    "    layer_4 = graph.get_tensor_by_name(\"layer4_out:0\")\n",
+    "    layer_7 = graph.get_tensor_by_name(\"layer7_out:0\")\n",
     "    \n",
-    "    #Create new output layers\n",
-    "    #First, a 1x1 convolutional to maintain spacial data\n",
-    "    layer_8_conv = tf.layers.conv2d(layer7, num_classes, 1,\n",
-    "                                padding='same', name='layer_8_conv',\n",
-    "                                kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
-    "                                kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
+    "#     kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
+    "#     kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2)\n",
+    "\n",
+    "\n",
+    "    # Skip connections for later\n",
+    "    skip_conv_3 = tf.layers.conv2d(layer_3, num_classes, 1, padding='same',\n",
+    "            kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
+    "            kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
     "    \n",
-    "    #transpose by 2 for then ext layer\n",
-    "    layer_9_transpose = tf.layers.conv2d_transpose(layer_8_conv, num_classes,\n",
-    "                                4, strides=2, padding='same',\n",
-    "                                name='layer_9_transpose',\n",
-    "                                kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
-    "                                kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
+    "    skip_conv_4 = tf.layers.conv2d(layer_4, num_classes, 1, padding='same',\n",
+    "            kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
+    "            kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
     "    \n",
-    "    #Another convolution\n",
-    "    layer_10_conv = tf.layers.conv2d(layer_9_transpose, num_classes, 1,\n",
-    "                                padding='same', name='layer_10_conv',\n",
-    "                                kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
-    "                                kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
+    "    #Layer 7 isn't skipped, it's passed right to transpose    \n",
+    "    fully_connected_convs = tf.layers.conv2d(layer_7, num_classes, 1, padding='same',\n",
+    "            kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
+    "            kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
     "    \n",
-    "    #Skip layer - so we dont lose too much positional information during conv/transposeds\n",
-    "    layer_11_skip = tf.add(layer_9_transpose, layer_10_conv, name='layer_11_skip')\n",
+    "    #From layer 7 we need to transpose up\n",
+    "    transpose_1 = tf.layers.conv2d_transpose(fully_connected_convs, num_classes, 4, 2, padding='same',\n",
+    "            kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
+    "            kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
     "    \n",
-    "    #transpose again\n",
-    "    layer_12_transpose = tf.layers.conv2d_transpose(layer_11_skip, num_classes,\n",
-    "                                4, strides=2, padding='same',\n",
-    "                                name='layer_12_transpose',\n",
-    "                                kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
-    "                                kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
+    "    # Add the skip layer from layer 4\n",
+    "    skip_1 = tf.add(transpose_1, skip_conv_4)\n",
     "    \n",
-    "    #and convolve...\n",
-    "    layer_13_conv = tf.layers.conv2d(layer_12_transpose, num_classes, 1,\n",
-    "                                padding='same', name='layer_13_conv',\n",
-    "                                kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
-    "                                kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
+    "    #Tranpose up from resultant layer\n",
+    "    transpose_2 = tf.layers.conv2d_transpose(skip_1, num_classes, 4, 2, padding='same',\n",
+    "            kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
+    "            kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
     "    \n",
-    "    #skip again\n",
-    "    layer_14_skip = tf.add(layer_12_transpose, layer_13_conv, name='layer_14_skip')\n",
+    "    #Create skip layer from layer 3\n",
+    "    skip_2 = tf.add(skip_conv_3, transpose_2)\n",
     "    \n",
-    "    #Transpose\n",
-    "    output_layer = tf.layers.conv2d_transpose(layer_14_skip, num_classes, 16, strides=8,\n",
-    "                                padding='same', name='output_layer',\n",
-    "                                kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
-    "                                kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2))\n",
+    "    #Final output layer\n",
+    "    output_layer = tf.layers.conv2d_transpose(skip_2, num_classes, 16, 8, padding='same',\n",
+    "            kernel_initializer = tf.random_normal_initializer(stddev=weights_initializer_stddev),\n",
+    "            kernel_regularizer= tf.contrib.layers.l2_regularizer(weights_regularized_l2),\n",
+    "            activation=tf.sigmoid)\n",
     "    \n",
     "    #layer_15 will be our transposed output!\n",
     "    \n",
     "    #Create the optimzer\n",
     "    logits = tf.reshape(output_layer, (-1, num_classes))\n",
     "    correct_label = tf.reshape(label, (-1, num_classes))\n",
+    "#     mean_absolute = tf.metrics.mean_absolute_error(tf.cast(logits, tf.float32), tf.cast(correct_label, tf.float32))\n",
     "    cross_entropy_loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=correct_label))\n",
     "    optimizer= tf.train.AdamOptimizer(learning_rate=learning_rate)\n",
     "    train_op = optimizer.minimize(cross_entropy_loss)\n",
+    "#     train_op = optimizer.minimize(mean_absolute)\n",
     "    \n",
     "    \n",
     "    #and now, training!\n",
     "    epochs = 1\n",
-    "    batch_size = 1\n",
+    "    batch_size = 10\n",
     "    keep_probability = 0.5\n",
-    "    learning_rate_alpha = 0.001\n",
+    "    learning_rate_alpha = 0.0001\n",
     "    \n",
     "    saver = tf.train.Saver()\n",
     "    \n",
@@ -420,15 +384,9 @@
     "                print(\"Batch {} - loss of {}\".format(batch_count, loss))\n",
     "        print(\"Training for epoch finished - \", loss_log[-1])\n",
     "        print()\n",
-    "    print(\"Training finished\")"
+    "    print(\"Training finished\")\n",
+    "    "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
