--- a/Segmantic Segmentation with VGG16.ipynb
+++ b/Segmantic Segmentation with VGG16.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,10 +314,11 @@
    "source": [
     "def get_logits(label, output_layer):\n",
     "    #Create the optimzer\n",
-    "    logits = tf.reshape(output_layer, (-1, num_classes))\n",
-    "    correct_label = tf.reshape(label, (-1, num_classes))\n",
-    "    \n",
-    "    return logits, correct_label"
+    "#     logits = tf.reshape(output_layer, (-1, num_classes))\n",
+    "#     correct_label = tf.reshape(label, (-1, num_classes))\n",
+    "#     \n",
+    "#     return logits, correct_label\n",
+    "    return output_layer, label"
    ]
   },
   {
@@ -335,19 +336,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 1\n",
+    "epochs = 3\n",
     "batch_size = 10\n",
     "keep_probability = 0.5 \n",
-    "learning_rate_alpha = 0.0001"
+    "learning_rate_alpha = 0.1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +408,13 @@
     "    truth = cv2.resize(truth, image_shape)\n",
     "    truth = imageToTruth(truth)\n",
     "    \n",
-    "    return sess.run([output_layer], feed_dict={\n",
+    "    print(\"image shape\", image.shape)\n",
+    "    print(\"truth shape\", np.shape(truth))\n",
+    "    \n",
+    "    softmax = tf.nn.softmax_cross_entropy_with_logits(logits=logits, labels=correct_labels)\n",
+    "    cross_entropy_loss = tf.reduce_mean(softmax)\n",
+    "    \n",
+    "    return sess.run([output_layer, softmax, cross_entropy_loss], feed_dict={\n",
     "            input_layer: np.array([image]),\n",
     "            label: np.array([truth]),\n",
     "            keep_prob: keep_probability,\n",
@@ -421,7 +428,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_test = None"
+    "output_test = None\n",
+    "loss = None\n",
+    "cross_entropy = None"
    ]
   },
   {
@@ -435,7 +444,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from b'./vgg/variables/variables'\n"
+      "INFO:tensorflow:Restoring parameters from b'./vgg/variables/variables'\n",
+      "Graph has been built - launching training\n",
+      "====== :-) ======\n",
+      "\n",
+      "Launching Epoch 0\n",
+      "Batch 10 - loss of 2.6357970237731934\n",
+      "Batch 20 - loss of 2.6406912803649902\n",
+      "Batch 30 - loss of 2.6381940841674805\n",
+      "Batch 40 - loss of 2.638031244277954\n",
+      "Batch 50 - loss of 2.633577585220337\n",
+      "Batch 60 - loss of 2.6368446350097656\n",
+      "Batch 70 - loss of 2.634695053100586\n",
+      "Batch 80 - loss of 2.639610767364502\n",
+      "Batch 90 - loss of 2.6415321826934814\n",
+      "Batch 100 - loss of 2.6375749111175537\n",
+      "Training for epoch finished -  2.637575\n",
+      "\n",
+      "Launching Epoch 1\n",
+      "Batch 10 - loss of 2.6357972621917725\n",
+      "Batch 20 - loss of 2.6406912803649902\n",
+      "Batch 30 - loss of 2.6381940841674805\n",
+      "Batch 40 - loss of 2.638031244277954\n",
+      "Batch 50 - loss of 2.633577585220337\n",
+      "Batch 60 - loss of 2.6368448734283447\n",
+      "Batch 70 - loss of 2.634695053100586\n",
+      "Batch 80 - loss of 2.639610528945923\n",
+      "Batch 90 - loss of 2.6415324211120605\n",
+      "Batch 100 - loss of 2.6375749111175537\n",
+      "Training for epoch finished -  2.637575\n",
+      "\n",
+      "Launching Epoch 2\n",
+      "Batch 10 - loss of 2.6357970237731934\n",
+      "Batch 20 - loss of 2.640690803527832\n",
+      "Batch 30 - loss of 2.6381940841674805\n",
+      "Batch 40 - loss of 2.638031244277954\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-33-851ed5bda8aa>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;31m#and now, training!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m     \u001b[0mtrain\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msess\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_layer\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkeep_prob\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m#execute graph on a singular image\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-30-e0be070d9c9c>\u001b[0m in \u001b[0;36mtrain\u001b[0;34m(sess, input_layer, label, keep_prob, learning_rate)\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m         \u001b[0;31m#get the images\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 17\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtruth\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mget_training_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     18\u001b[0m             \u001b[0mbatch_count\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             _, loss = sess.run(\n",
+      "\u001b[0;32m<ipython-input-7-3ec804224b7a>\u001b[0m in \u001b[0;36mget_training_data\u001b[0;34m(batch_size)\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mmaps\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap_image\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m         \u001b[0;32myield\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimages\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmaps\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     31\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
@@ -453,19 +509,17 @@
     "    cross_entropy_loss, optimizer, train_op = get_loss(logits, correct_labels)\n",
     "\n",
     "    #and now, training!\n",
-    "#     train(sess, input_layer, label, keep_prob, learning_rate)\n",
+    "    train(sess, input_layer, label, keep_prob, learning_rate)\n",
     "    \n",
     "    #execute graph on a singular image\n",
-    "    output_test = execute_on_image(sess, logits, input_layer, label, keep_prob, learning_rate)\n",
+    "#     output_test, loss, cross_entropy = execute_on_image(sess, logits, input_layer, label, keep_prob, learning_rate)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "scrolled": true
-   },
+   "execution_count": 27,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -473,137 +527,45 @@
        "(576, 160, 13)"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_test[0][0].shape"
+    "output_test[0].shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[7.67056823e-01, 3.09352130e-01, 1.31825760e-01, ...,\n",
-       "         2.91122705e-01, 1.60486817e-01, 7.48600543e-01],\n",
-       "        [8.68503228e-02, 1.86929703e-01, 5.14724627e-02, ...,\n",
-       "         9.99738872e-01, 2.25904211e-03, 3.45170265e-04],\n",
-       "        [9.98210669e-01, 1.14997312e-01, 5.11900435e-05, ...,\n",
-       "         9.99963164e-01, 9.93969083e-01, 8.65127367e-04],\n",
+       "array([[[2.3743062, 2.1987348, 3.1291246, ..., 2.420776 , 2.4560966,\n",
+       "         2.800263 ],\n",
+       "        [3.119772 , 2.1103735, 3.2093792, ..., 2.9014883, 2.881716 ,\n",
+       "         2.1775074],\n",
+       "        [2.489198 , 2.1946561, 2.314483 , ..., 3.0509048, 2.96563  ,\n",
+       "         2.5517757],\n",
        "        ...,\n",
-       "        [5.74969769e-01, 4.77827191e-01, 2.98987150e-01, ...,\n",
-       "         1.57196954e-01, 9.02837217e-01, 1.33709073e-01],\n",
-       "        [7.45507777e-01, 7.63445735e-01, 6.01666272e-01, ...,\n",
-       "         7.19402909e-01, 5.16307831e-01, 8.78918827e-01],\n",
-       "        [2.98375100e-01, 7.04606473e-01, 3.46926153e-01, ...,\n",
-       "         8.81381750e-01, 1.81084663e-01, 6.07959151e-01]],\n",
-       "\n",
-       "       [[9.99996424e-01, 9.15998518e-01, 2.99819499e-01, ...,\n",
-       "         8.07579815e-01, 9.75729823e-01, 1.46905193e-03],\n",
-       "        [1.01733254e-02, 4.47796099e-03, 5.23329824e-02, ...,\n",
-       "         9.98283386e-01, 9.98081923e-01, 9.81153250e-01],\n",
-       "        [6.45237088e-01, 9.99958277e-01, 7.49354303e-01, ...,\n",
-       "         9.98909950e-01, 9.82536554e-01, 9.97001827e-01],\n",
-       "        ...,\n",
-       "        [7.38901854e-01, 5.76569200e-01, 1.97195515e-01, ...,\n",
-       "         3.06770414e-01, 2.89311320e-01, 4.29610848e-01],\n",
-       "        [4.26049471e-01, 9.16268826e-01, 5.16890526e-01, ...,\n",
-       "         5.03565252e-01, 3.97897810e-01, 5.95658600e-01],\n",
-       "        [3.08055878e-01, 6.44134820e-01, 3.62679094e-01, ...,\n",
-       "         6.19884133e-01, 6.49683416e-01, 2.59905398e-01]],\n",
-       "\n",
-       "       [[4.96385008e-01, 7.90371895e-01, 1.13599366e-02, ...,\n",
-       "         1.71941027e-01, 5.45929857e-02, 8.11703503e-01],\n",
-       "        [9.55729187e-01, 2.59068102e-01, 6.22286415e-03, ...,\n",
-       "         1.62193738e-02, 4.12776440e-01, 9.92377043e-01],\n",
-       "        [9.62395608e-01, 3.32045972e-01, 3.84372615e-05, ...,\n",
-       "         8.66348203e-03, 8.31960440e-01, 3.58016007e-02],\n",
-       "        ...,\n",
-       "        [3.54254514e-01, 3.46503317e-01, 2.73319185e-01, ...,\n",
-       "         8.54062021e-01, 4.67859745e-01, 5.48231125e-01],\n",
-       "        [2.31669441e-01, 3.22368681e-01, 3.52699399e-01, ...,\n",
-       "         6.63776577e-01, 6.15737736e-01, 7.24985838e-01],\n",
-       "        [5.44653952e-01, 3.04479241e-01, 7.13186920e-01, ...,\n",
-       "         6.01417959e-01, 3.08085024e-01, 4.95515823e-01]],\n",
-       "\n",
-       "       ...,\n",
-       "\n",
-       "       [[2.72134244e-01, 3.94038036e-02, 8.83069396e-01, ...,\n",
-       "         1.98672950e-01, 2.46924744e-03, 2.05147654e-01],\n",
-       "        [3.67045701e-01, 1.94758538e-03, 6.49371684e-01, ...,\n",
-       "         9.97802317e-01, 1.92832381e-01, 3.51840109e-01],\n",
-       "        [9.56746101e-01, 8.60012311e-04, 8.81876349e-01, ...,\n",
-       "         3.36408585e-01, 4.03594911e-01, 6.80391816e-03],\n",
-       "        ...,\n",
-       "        [6.04712069e-01, 7.36889899e-01, 1.34688814e-03, ...,\n",
-       "         8.63294959e-01, 9.77147937e-01, 9.97840524e-01],\n",
-       "        [1.40951219e-04, 9.40025508e-01, 6.16088137e-02, ...,\n",
-       "         9.84275281e-01, 6.75089419e-01, 9.03231025e-01],\n",
-       "        [9.37783360e-01, 1.12686224e-01, 5.79544067e-01, ...,\n",
-       "         9.65473831e-01, 8.85893226e-01, 9.99759972e-01]],\n",
-       "\n",
-       "       [[8.39809477e-02, 9.98035014e-01, 9.19874609e-01, ...,\n",
-       "         7.90360391e-01, 9.32942424e-03, 8.83708477e-01],\n",
-       "        [9.62095737e-01, 2.24412954e-03, 9.42993164e-01, ...,\n",
-       "         1.18629076e-03, 8.79474953e-02, 2.74549723e-01],\n",
-       "        [2.98405136e-03, 8.19441617e-01, 7.24502206e-01, ...,\n",
-       "         9.83320832e-01, 9.52613711e-01, 7.57417798e-01],\n",
-       "        ...,\n",
-       "        [9.74347651e-01, 3.96832684e-03, 8.72677386e-01, ...,\n",
-       "         9.99958277e-01, 2.01671906e-02, 1.04151398e-01],\n",
-       "        [3.60234790e-02, 3.27328831e-01, 6.84720099e-01, ...,\n",
-       "         8.81937325e-01, 9.97203946e-01, 5.93290269e-01],\n",
-       "        [8.38998139e-01, 9.78953660e-01, 9.69695747e-01, ...,\n",
-       "         3.19885373e-01, 9.85516012e-01, 7.79053709e-03]],\n",
-       "\n",
-       "       [[4.13569719e-01, 9.61568236e-01, 3.70962083e-01, ...,\n",
-       "         1.12280799e-02, 9.92692053e-01, 4.34198260e-01],\n",
-       "        [9.06795382e-01, 8.60379577e-01, 9.60747004e-01, ...,\n",
-       "         1.33685740e-02, 3.38454366e-01, 9.97545660e-01],\n",
-       "        [8.96685064e-01, 3.96203518e-01, 9.58063304e-01, ...,\n",
-       "         9.48554397e-01, 7.67331943e-02, 8.90479088e-01],\n",
-       "        ...,\n",
-       "        [3.43185067e-02, 8.54498744e-01, 9.95469213e-01, ...,\n",
-       "         9.40006614e-01, 8.08785796e-01, 2.86350362e-02],\n",
-       "        [9.99739468e-01, 1.56411260e-01, 9.17107999e-01, ...,\n",
-       "         3.84743035e-01, 1.82809487e-01, 9.46036279e-01],\n",
-       "        [6.13554239e-01, 9.95211780e-01, 2.93902278e-01, ...,\n",
-       "         9.98663664e-01, 9.83220041e-01, 4.86976475e-01]]], dtype=float32)"
+       "        [2.183793 , 2.45578  , 2.9735231, ..., 3.0132248, 3.173509 ,\n",
+       "         2.7209349],\n",
+       "        [2.135826 , 2.231505 , 2.1744595, ..., 2.223272 , 2.5153522,\n",
+       "         3.0756202],\n",
+       "        [2.4919426, 3.1813722, 2.435748 , ..., 2.839909 , 2.3955507,\n",
+       "         2.9025197]]], dtype=float32)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "output_test[0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "92160"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "160*576"
+    "loss"
    ]
   },
   {
